Fixed many issues with Tablet
- Fixes issues with desktop shell
- Replaced sddm with gdm (because it has virtual keyboard)
- Packaged wlr-autorotate

--- a/homes/x86_64-linux/kylekrein/niri/settings.json
+++ b/homes/x86_64-linux/kylekrein/niri/settings.json
@@ -35,6 +35,7 @@
   "showWorkspaceIndex": false,
   "showWorkspacePadding": false,
   "showWorkspaceApps": true,
+  "maxWorkspaceIcons": 30,
   "workspaceNameIcons": {},
   "clockCompactMode": false,
   "focusedWindowCompactMode": false,
